--- a/index.html
+++ b/index.html
@@ -5,15 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="assets/css/style.css">
-    <title>Zodiac Finder</title>
+    <title>Localizador do Zodíaco</title>
 </head>
 <body>
     <div class="container">
-        <h1>Zodiac Finder</h1>
+        <h1>Localizador do Zodíaco</h1>
         <form id="zodiacForm">
-            <label for="dateOfBirth">Date of Birth:</label>
+            <label for="dateOfBirth">Data de nascimento:</label>
             <input type="date" id="dateOfBirth" name="dateOfBirth" class="form-control" required>
-            <button type="submit" class="btn btn-primary mt-3">Find Zodiac</button>
+            <button type="submit" class="btn btn-primary mt-3">Encontre o Zodíaco</button>
         </form>
         <div id="result" class="mt-4"></div>
     </div>
